syntax = "proto3";
package document;
option go_package = "github.com/thatlq1812/policy-system/shared/pkg/api/document";

message PolicyDocument {
    string id = 1;
    string document_name = 2;
    string platform = 3;
    bool is_mandatory = 4;
    int64 effective_timestamp = 5;
    string content_html = 6;
    string file_url = 7;
    int64 created_at = 8;
    string created_by = 9;
}

message CreateDocumentRequest {
    string document_name = 1;
    string platform = 2;
    bool is_mandatory = 3;
    int64 effective_timestamp = 4;
    string content_html = 5;
    string file_url = 6;
    string created_by = 7;
}

message CreateDocumentResponse {
    PolicyDocument document = 1;
}

message GetLatestPolicyRequest {
    string platform = 1;
    string document_name = 2;
}

message GetLatestPolicyResponse {
    PolicyDocument document = 1;
}

service DocumentService {
    rpc CreatePolicy(CreateDocumentRequest) returns (CreateDocumentResponse);
    rpc GetLatestPolicyByPlatform(GetLatestPolicyRequest) returns (GetLatestPolicyResponse);
}